@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* `pinspect profiles` no longer requires parsing the system configuration.
+
 * COLUMNS now is always 0 or higher to make perl (gentoo bug 394091)
   play nice.
 
